--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - libboost-all-dev
-    - libboost-test-dev
+    - libopenblas-dev
+    - libdlib-dev
     - g++-8
 env:
   - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
